--- a/Vuejs/Ejercicio2/moz-todo-react/package.json
+++ b/Vuejs/Ejercicio2/moz-todo-react/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "firebase": "^11.2.0",
+    "framer-motion": "^12.0.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.4",
+    "react-router-dom": "^7.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -23,6 +30,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "vite": "^6.1.0"
   }
 }
